# AdviserAI-constructor

./: .env.example  .gitignore  ADVANCED_EXCHANGE_ARCH.md  DEBATE_INTEGRATION_SPEC.md  OUTCOME_AGENT_SPEC.md  README.md  REPRODUCIBILITY.md  RISK_GOVERNANCE.md  TELEGRAM_NOTIFICATIONS.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
app/: main.py  scripts.py
docs/: vwap_v4_amb_review.md
exports/: ai_cfg_01.csv  ai_cfg_02.csv  ai_cfg_03.csv  ai_cfg_04.csv  ai_cfg_05.csv  ai_cfg_06.csv  ai_cfg_07.csv  ai_cfg_08.csv
migrations/: env.py
reports/: M4_AUDIT.md  trade_report_24h_2026-06-12.html
tasks/: ac4-plan.md  ac4-todo.md  audit-followup-plan.md  audit-followup-todo.md  debate-integration-plan.md  debate-integration-todo.md  email-2fa-plan.md  frontend-spec.md  m4-closeout-plan.md  m4-frontend-tz.md  m4-remaining.md  m4-remediation-plan.md  m4-remediation-todo.md  oa-plan.md  oa-todo.md  phase1-plan.md  phase1-todo.md  phase2-todo.md  phase4-frontend-plan.md  phase4-frontend-todo.md  phase4-plan.md  phase4-todo.md  plan.md  todo.md
tests/: test_account_trades_service.py  test_accounts_trades_endpoint.py  test_admin_endpoints.py  test_agent_freshness.py  test_agent_outcomes_endpoint.py  test_agent_weights_apply_step_up.py  test_analysis_normalization_debate.py  test_analysis_proxy_endpoints.py  test_anomaly_detector.py  test_anomaly_sweep.py  test_audit_endpoints.py  test_audit_followup_endpoints.py  test_auth.py  test_auto_trade_close_positions.py  test_auto_trade_endpoints.py  test_auto_trade_hydrate.py  test_auto_trade_multi_strategy.py  test_auto_trade_rest_reconcile.py  test_auto_trade_risk_engine.py  test_auto_trade_service.py  test_auto_trade_signal.py  test_auto_trade_tasks.py  test_auto_trade_trade_sync.py  (+66 more)
(+290 files in other folders)
